--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -25,7 +25,7 @@ jobs:
     - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
-        python -m pip install poetry
+        python -m pip install --upgrade poetry
     - name: Install dependencies
       run: poetry install
     - name: Run tests
