--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,15 @@
 # Poetry Ref: https://python-poetry.org/docs/pyproject/
 [tool.poetry]
 name = "applepassgenerator"
-version = "0.0.2"
-description = "Python package to create passes compatible with Apple Wallet."
-authors = ["Primedigital Global <oss@primedigital.tech>"]
-maintainers = [
-    "Vikalp Jain <vikalp@primedigital.tech>",
-    "Vaibhav Sahu <vaibhav@primedigital.tech>",
-    "Hardik Shah <hardik@primedigital.tech>",
-]
+version = "0.1.0"
+description = "Python package to create passes compatible with Apple Wallet. (forked from Primedigital Global)"
+authors = ["Loic Tosser <loic@kalvad.com>"]
 license = "MIT"
 
 readme = "README.md"
 packages = [{ include = "applepassgenerator", from = "src" }]
 
-homepage = "https://primedigitalglobal.github.io/applepassgenerator"
-repository = "https://github.com/PrimedigitalGlobal/applepassgenerator"
-documentation = "https://primedigitalglobal.github.io/applepassgenerator"
+repository = "https://github.com/KalvadTech/applepassgenerator"
 
 keywords = ["apple pass", "apple wallet", "passbook", "applepassgenerator"]
 
@@ -30,15 +23,13 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 cryptography = ">=38.0.4"
 
 [tool.poetry.dev-dependencies]
-bump2version = "^1.0.1"
-pre-commit = "^2.19.0"
-flake8 = "^5.0.4"
-pytest = "^7.1.2"
-pytest-cov = "^3.0.0"
+ruff = "^0.8.1"
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
 mkdocs = "^1.3.0"
 mkdocs-material = "^8.3.8"
 mkdocs-material-extensions = "^1.0.3"
