--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 # Poetry Ref: https://python-poetry.org/docs/pyproject/
 [tool.poetry]
-name = "applepassgenerator"
+name = "apple-wallet-pass"
 version = "0.1.0"
 description = "Python package to create passes compatible with Apple Wallet. (forked from Primedigital Global)"
 authors = ["Loic Tosser <loic@kalvad.com>"]
 license = "MIT"
 
 readme = "README.md"
-packages = [{ include = "applepassgenerator", from = "src" }]
+packages = [{ include = "apple_wallet_pass", from = "src" }]
 
-repository = "https://github.com/KalvadTech/applepassgenerator"
+repository = "https://github.com/KalvadTech/apple-wallet-pass"
 
 keywords = ["apple pass", "apple wallet", "passbook", "applepassgenerator"]
 
@@ -18,7 +18,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.11",
     "Operating System :: OS Independent",
 ]
 
@@ -28,11 +28,6 @@ cryptography = ">=38.0.4"
 
 [tool.poetry.dev-dependencies]
 ruff = "^0.8.1"
-pytest = "^8.3.4"
-pytest-cov = "^6.0.0"
-mkdocs = "^1.3.0"
-mkdocs-material = "^8.3.8"
-mkdocs-material-extensions = "^1.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
